# ToDoList

./: .env.example  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: cecc05ff9f99_create_project_and_task_tables.py  f29ca0bbdc11_create_project_and_task_tables.py
api/: routers.py
api/controller_schemas/requests/: projects_request_schema.py  tasks_request_schema.py
api/controller_schemas/responses/: projects_response_schema.py  tasks_response_schema.py
api/controllers/: projects_controller.py  tasks_controller.py
cli/: console.py
commands/: scheduler.py
db/: base.py  session.py
exceptions/: service_exceptions.py
interface/: cli.py
models/: project.py  task.py
repositories/: project_repository.py  task_repository.py
services/: project_service.py  task_service.py
