[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "Amir Mohammad Zaker",email = "amzzaaker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime (>=5.5,<6.0)",
    "uuid (>=1.30,<2.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
