[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "Amir Mohammad Zaker",email = "amzzaaker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime (>=5.5,<6.0)",
    "uuid (>=1.30,<2.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg (>=3.3.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
